fix: improve readability from the code

--- a/src/components/timeline/Timeline.module.scss
+++ b/src/components/timeline/Timeline.module.scss
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    padding: 0 8px;
+    padding: 0 16px;
     user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -10,9 +10,20 @@ body {
 }
 
 .timelineContainer {
-    display: flex;
     width: 100%;
     position: relative;
+
+    .laneList {
+        display: flex;
+        width: 100%;
+        padding: 0;
+        justify-content: space-between;
+        overflow: hidden;
+
+        .laneDay {
+            list-style: none;
+        }
+    }
 
     .event {
         position: absolute;
@@ -20,6 +31,7 @@ body {
         padding: 5px;
         border-radius: 5px;
         border: 1px dashed white;
+
         &.hover {
             z-index: 1;
             cursor: pointer;
@@ -37,32 +49,30 @@ body {
     }
 }
 
-.monthContainer {
-    min-width: 100%;
-    display: flex;
-    flex-direction: column;
+.headerContainer {
+    width: 100%;
 
     .month {
         width: 100%;
+        text-align: center;
+        margin-top: 18px;
+        font-size: 20px;
+
         .navigationIcon {
             cursor: pointer;
             margin: 0 10px;
             vertical-align: middle;
+
             &.disabled {
                 color: #ccc;
             }
         }
     }
-}
 
-.monthContainer {
-    .month {
-        text-align: center;
-        margin-top: 18px;
-        font-size: 20px;
-    }
     .dayList {
         display: flex;
+        display: flex;
+        justify-content: space-between;
         padding: 0px;
 
         .day {
